# jogo-da-velha

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt
src/: App.cpp  App.hpp  Board.cpp  Board.hpp  DebugInfo.cpp  DebugInfo.hpp  Globals.cpp  Globals.hpp  main.cpp  precompiled.hpp
